# kalshibot

./: .env.example  .gitignore  README.md  pyproject.toml
kalshibot/: __main__.py  analyzer.py  cli.py  kalshi_client.py  monitor.py  reporter.py  soccer.py
kalshibot/monitor/: __init__.py  __main__.py
scripts/: daily_scan.sh  monitor.sh
