[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalshibot"
version = "0.1.0"
description = "Daily scanner for undervalued Kalshi markets"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
kalshibot = "kalshibot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kalshibot"]
